--- a/mbti test/index.html
+++ b/mbti test/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="korea">
 <div align="center">
     <ins class="kakao_ad_area" style="display:none;" 
     data-ad-unit    = "DAN-KqdDV5CVkLX9Whm5" 
